# waydroid-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml
.github/actions/waydroid-cloud/: README.md  action.yaml
.github/workflows/: ci.yml
data/dbus/: io.github.waydroid_toolkit.conf  io.github.waydroid_toolkit.service
data/profiles/: waydroid.yaml
demos/nowinandroid/: Makefile  README.md
demos/nowinandroid/.github/workflows/: nia-ci.yaml  nia-e2e.yaml  nia-pr.yaml
docs/: ROADMAP.md  SPEC.md  index.md
docs/cli/: backup.md  dbus.md  extensions.md  images.md  maintenance.md  overview.md  packages.md  performance.md  snapshot.md  storage.md  stream.md
docs/development/: architecture.md  contributing.md  packaging.md  roadmap.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/infra/: demos.md  github-action.md  terraform.md
docs/modules/: dbus.md  extensions.md  images.md  maintenance.md  snapshot.md  storage.md  streaming.md
pkg/: build.sh
pkg/aur/: PKGBUILD
pkg/debian/: changelog  control  copyright  rules
pkg/flatpak/: io.github.waydroid_toolkit.WaydroidToolkit.yaml
pkg/rpm/: waydroid-toolkit.spec
src/waydroid_toolkit/: __init__.py
src/waydroid_toolkit/cli/: main.py
src/waydroid_toolkit/cli/commands/: backend.py  backup.py  cloud_sync.py  dashboard.py  dbus.py  doctor.py  extensions.py  fleet.py  gpu.py  images.py  install.py  maintenance.py  net.py  packages.py  performance.py  profiles.py  publish.py  setup_rootless.py  snapshot.py  status.py  storage.py  stream.py  tui.py  (+2 more)
src/waydroid_toolkit/core/: __init__.py  adb.py  privilege.py  waydroid.py
src/waydroid_toolkit/gui/: app.py  bridge.py
src/waydroid_toolkit/utils/: __init__.py  distro.py  net.py  overlay.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  provider.tf  variables.tf
terraform/examples/multi-host/: main.tf
terraform/examples/single-host/: main.tf
terraform/modules/waydroid/: cloud-init.yaml.tpl  main.tf  outputs.tf  variables.tf
tests/integration/: conftest.py  test_adb_integration.py  test_dbus_integration.py  test_extensions_integration.py  test_images_integration.py  test_maintenance_integration.py  test_packages_integration.py  test_snapshot_integration.py  test_waydroid_integration.py
tests/unit/: test_androidtv.py  test_backend_set_alias.py  test_backup.py  test_cli.py  test_container_backend.py  test_dashboard_cmd.py  test_dbus_service.py  test_disk_cmd.py  test_distro.py  test_doctor.py  test_extensions.py  test_gui_toast.py  test_images.py  test_installer.py  test_keymapper.py  test_maintenance_bridge.py  test_net.py  test_overlay.py  test_presenters.py  test_resolver.py  test_selector_detect_order.py  test_setup_rootless.py  test_shell_cmd.py  test_snapshot.py  test_storage.py  test_storage_cmd.py  test_stream.py  test_stream_cmd.py  test_tui_cmd.py  test_waydroid_core.py  test_widevine.py
www/: index.html
www/css/: style.css
(+46 files in other folders)
