[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "waydroid-toolkit"
version = "0.2.0"
description = "Unified management suite for Waydroid"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "click>=8.1",
    "requests>=2.31",
    "toml>=0.10",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
# Qt GUI — PySide6 is tried first; PyQt6 is the fallback (see gui/qt_compat.py)
gui = [
    "PySide6>=6.6",
    "qtpy>=2.4",
]
# PyQt6 alternative binding (install instead of PySide6 if preferred)
gui-pyqt = [
    "PyQt6>=6.6",
    "PyQt6-WebEngine>=6.6",
    "qtpy>=2.4",
]
# GTK legacy GUI (kept for reference; not actively maintained)
gui-gtk = [
    "PyGObject>=3.44",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[project.scripts]
wdt = "waydroid_toolkit.cli.main:cli"

[project.gui-scripts]
waydroid-toolkit = "waydroid_toolkit.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
waydroid_toolkit = ["py.typed", "gui/qml/**/*.qml", "gui/qml/**/*.js"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E402",   # module-level import not at top — unavoidable in Qt compat shim
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=waydroid_toolkit --cov-report=term-missing"
markers = [
    "integration: marks tests that require a live Waydroid session (deselect with -m 'not integration')",
    "slow: marks tests that take more than a few seconds",
]
